# vajolet3

./: .cproject  .gitignore  .project  .travis.yml  BaseTypeTemplate.h  BitBoardIndex.h  BitMap.cpp  BitMap.h  BitMapMoveGenerator.cpp  BitMapMoveGenerator.h  CMakeLists.txt  HashKeys.cpp  HashKeys.h  Move.cpp  Move.h  MoveGenerator.cpp  MoveGenerator.h  MoveList.h  MoveSelector.cpp  MoveSelector.h  Position.cpp  Position.h  Score.h  State.h  Vajolet.cpp  Vajolet.h  eCastle.h  eTurn.h  status.txt  tSquare.cpp  tSquare.h  todo.txt  vajolet.cpp  vajolet.h
Debug/: mingw-w64.bat  run.bat
DebugClang/: mingw-w64.bat  run.bat
Release/: mingw-w64.bat  run.bat
ReleaseClang/: mingw-w64.bat  run.bat
contrib/gtest/: gtest-all.cc
script/: calcComplexity.bat
test/: AllTest.cpp  BitBoardIndexTest.cpp  BitMapMoveGeneratorTest.cpp  BitMapTest.cpp  HashKeysTest.cpp  MoveGeneratorTest.cpp  MoveGeneratorTestLong.cpp  MoveListTest.cpp  MoveTest.cpp  PositionTest.cpp  ScoreTest.cpp  StateTest.cpp  TsquareTest.cpp  UnitTest.cpp  tSquareTest.cpp
